# rag_project

./: .env.example  .gitignore  README.md  api.py  main.py  nodes.py  prompts.py  pyproject.toml  readme.md  requirements.txt  state.py  testing_rag_knowledge.ipynb  trails_DD_json_indexed.ipynb
api/: api.py  llm_config.py  main.py  nodes.py  prompts.py  state.py
indexing/: PINECONE_VECTOR_DETAILS.md  README.md  index.py  requirements.txt
web_app/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web_app/src/: main.tsx
web_app/src/app/: App.module.css  App.tsx
web_app/src/components/chat/: ChatSurface.module.css  ChatSurface.tsx  ChatTranscript.module.css  ChatTranscript.tsx  MessageComposer.module.css  MessageComposer.tsx
web_app/src/components/layout/: ConversationSidebar.module.css  ConversationSidebar.tsx
web_app/src/config/: env.ts
web_app/src/hooks/: useChatSession.ts
web_app/src/services/: chatApi.ts
web_app/src/styles/: global.css
web_app/src/types/: chat.ts
web_app/src/utils/: formatters.ts
