[project]
name = "rag-project"
version = "0.1.0"
description = "SELF-RAG backend with a React chat UI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "langchain-core>=0.3.74",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=1.1.12",
    "langgraph>=0.6.7",
    "pydantic>=2.11.7",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.35.0",
]
